<resources>
    <string name="app_name">Lilas House</string>

    <!-- EditText -->
    <string name="EditTextHint_User">Email</string>
    <string name="EditTextHint_Password">Senha</string>
    <string name="EditTextHint_PasswordAGN">Insira sua senha novamente</string>
    <string name="EditTextHint_Nome">Nome</string>

    <!-- TextView -->
    <string name="logo_name_Lilas">LILAS</string>
    <string name="logo_name_House">HOUSE</string>
    <string name="TextView_Cadastrar">Cadastrar Conta</string>
    <string name="TextView_EsqueciSenha">Esqueci a senha</string>
    <string name="TextView_RedefinirSenha">Redefinir senha</string>
    <string name="TextView_InsiraEmail">Insira o email da sua conta</string>
    <string name="TextView_InsiraNome">Insira seu nome</string>
    <string name="TextView_InsiraSenha">Insira a senha da sua conta</string>
    <string name="TextView_ConfirmeSenha">Confirme sua senha</string>

    <!-- Button -->
    <string name="Button_Entrar">Entrar</string>
    <string name="Button_EnviarEmail">Enviar Email de redefinição de senha</string>
    <string name="Button_CadastrarConta">Cadastrar</string>
    <string name="cadastrar_servi_o">Cadastrar Serviço</string>
    <string name="ver_pedidos">Ver pedidos</string>
    <string name="seja_bem_vindo">Seja bem vindo!</string>
    <string name="ver_servi_os">Ver serviços</string>
    <string name="pesquisar_servi_os">Pesquisar serviços</string>
    <string name="ver_meus_servi_os">Ver meus serviços</string>
    <string name="alterar_senha">Alterar senha</string>
    <string name="confirmar_nova_senha">Confirmar nova senha</string>
    <string name="digite_a_nova_senha">Digite a nova senha</string>
    <string name="enviar">Enviar</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="admin">Admin</string>
    <string name="name">Name</string>
    <string name="name1">Name</string>
    <string name="titulo">Titulo</string>
    <string name="descricao">Descricao</string>
    <string name="preco">Preco</string>
</resources>