<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/VerdeBackground"
    tools:context=".EsqueciSenha">

    <TextView
        android:id="@+id/textView_RedefinirSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/alfa_slab_one"
        android:layout_marginTop="30dp"
        android:text="@string/TextView_RedefinirSenha"
        android:textColor="@color/LilasPrincipal"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/textView_InsiraEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alfa_slab_one"
        android:layout_marginTop="180dp"
        android:text="@string/TextView_InsiraEmail"
        android:textColor="@color/LilasPrincipal"
        android:textSize="20sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/LilasPrincipal">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edit_text"
            android:fontFamily="@font/alfa_slab_one"
            android:hint="@string/EditTextHint_User" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_EnviarEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/LilasPrincipal"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/Button_EnviarEmail" />
</LinearLayout>