<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/VerdeBackground"
    tools:context=".ActivityEmpresa">

    <Button
        android:id="@+id/btn_ver_pedido"
        android:layout_width="273dp"
        android:layout_height="88dp"
        android:text="@string/ver_pedidos"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.427"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.671"
        tools:ignore="MissingConstraints,VisualLintBounds" />

    <TextView
        android:id="@+id/txt_cadastra_servico"
        android:layout_width="403dp"
        android:layout_height="164dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/seja_bem_vindo"
        android:textAlignment="center"
        android:textColor="#9C27B0"
        android:textSize="55sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/btn_cadastro_serv"
        android:layout_width="273dp"
        android:layout_height="88dp"
        android:text="@string/cadastrar_servi_o"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.427"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.444"
        tools:ignore="MissingConstraints,TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>